{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 143,
  "lineage": "fcca8f8a-7498-d31b-6de1-018fa9697087",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sbh_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:776567512687:internet-gateway/igw-0022f54c843d499d3",
            "id": "igw-0022f54c843d499d3",
            "owner_id": "776567512687",
            "tags": {
              "Environment": "dev",
              "Name": "sbh-igw-dev",
              "Project": "sbh"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sbh-igw-dev",
              "Project": "sbh"
            },
            "vpc_id": "vpc-07e91ce7d5f546fb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sbh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "sbh_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:776567512687:loadbalancer/app/sbh-alb-dev/0a520148bdfdbd7c",
            "arn_suffix": "app/sbh-alb-dev/0a520148bdfdbd7c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sbh-alb-dev-1355025660.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:776567512687:loadbalancer/app/sbh-alb-dev/0a520148bdfdbd7c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sbh-alb-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04489e09a5bf64040"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-011cd0f0dcba5c788"
              },
              {
                "subnet_id": "subnet-06c196d241873f2af"
              }
            ],
            "subnets": [
              "subnet-011cd0f0dcba5c788",
              "subnet-06c196d241873f2af"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "sbh-alb-dev",
              "Project": "sbh"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sbh-alb-dev",
              "Project": "sbh"
            },
            "vpc_id": "vpc-07e91ce7d5f546fb2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sbh_alb_sg",
            "aws_subnet.sbh_public_subnets",
            "aws_vpc.sbh_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sbh_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:776567512687:listener/app/sbh-alb-dev/0a520148bdfdbd7c/69178450e28c1a0b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:776567512687:targetgroup/sbh-tg-dev/a6d64f53ae1ece6d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:776567512687:listener/app/sbh-alb-dev/0a520148bdfdbd7c/69178450e28c1a0b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:776567512687:loadbalancer/app/sbh-alb-dev/0a520148bdfdbd7c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Name": "sbh-http-listener-dev",
              "Project": "sbh"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sbh-http-listener-dev",
              "Project": "sbh"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.sbh_alb",
            "aws_lb_target_group.sbh_tg",
            "aws_security_group.sbh_alb_sg",
            "aws_subnet.sbh_public_subnets",
            "aws_vpc.sbh_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sbh_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:776567512687:targetgroup/sbh-tg-dev/a6d64f53ae1ece6d",
            "arn_suffix": "targetgroup/sbh-tg-dev/a6d64f53ae1ece6d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:776567512687:targetgroup/sbh-tg-dev/a6d64f53ae1ece6d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:776567512687:loadbalancer/app/sbh-alb-dev/0a520148bdfdbd7c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sbh-tg-dev",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "sbh-tg-dev",
              "Project": "sbh"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sbh-tg-dev",
              "Project": "sbh"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07e91ce7d5f546fb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sbh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sbh_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:776567512687:route-table/rtb-0eb4129f0ee6a74d4",
            "id": "rtb-0eb4129f0ee6a74d4",
            "owner_id": "776567512687",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0022f54c843d499d3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "sbh-public-rt-dev",
              "Project": "sbh"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sbh-public-rt-dev",
              "Project": "sbh"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e91ce7d5f546fb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.sbh_igw",
            "aws_vpc.sbh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sbh_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0327148a7d4fb3593",
            "route_table_id": "rtb-0eb4129f0ee6a74d4",
            "subnet_id": "subnet-06c196d241873f2af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.sbh_igw",
            "aws_route_table.sbh_public_rt",
            "aws_subnet.sbh_public_subnets",
            "aws_vpc.sbh_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050ec62bd057321e2",
            "route_table_id": "rtb-0eb4129f0ee6a74d4",
            "subnet_id": "subnet-011cd0f0dcba5c788"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.sbh_igw",
            "aws_route_table.sbh_public_rt",
            "aws_subnet.sbh_public_subnets",
            "aws_vpc.sbh_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sbh_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:776567512687:security-group/sg-04489e09a5bf64040",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04489e09a5bf64040",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sbh-alb-sg-dev20250913041317151400000007",
            "name_prefix": "sbh-alb-sg-dev",
            "owner_id": "776567512687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "sbh-alb-sg-dev",
              "Project": "sbh"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sbh-alb-sg-dev",
              "Project": "sbh"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e91ce7d5f546fb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sbh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sbh_ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:776567512687:security-group/sg-08f0e467d804ce61f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f0e467d804ce61f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04489e09a5bf64040"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "sbh-ecs-sg-dev20250913041319922200000009",
            "name_prefix": "sbh-ecs-sg-dev",
            "owner_id": "776567512687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "sbh-ecs-sg-dev",
              "Project": "sbh"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sbh-ecs-sg-dev",
              "Project": "sbh"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e91ce7d5f546fb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sbh_alb_sg",
            "aws_vpc.sbh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sbh_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:776567512687:security-group/sg-044e7d50245ba376d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-044e7d50245ba376d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f0e467d804ce61f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sbh-rds-sg-dev2025091304132272380000000a",
            "name_prefix": "sbh-rds-sg-dev",
            "owner_id": "776567512687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "sbh-rds-sg-dev",
              "Project": "sbh"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sbh-rds-sg-dev",
              "Project": "sbh"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e91ce7d5f546fb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sbh_alb_sg",
            "aws_security_group.sbh_ecs_sg",
            "aws_vpc.sbh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbh_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:776567512687:subnet/subnet-00383f1b7b5d0e741",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00383f1b7b5d0e741",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "776567512687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "sbh-private-subnet-1-dev",
              "Project": "sbh",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sbh-private-subnet-1-dev",
              "Project": "sbh",
              "Type": "private"
            },
            "vpc_id": "vpc-07e91ce7d5f546fb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sbh_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:776567512687:subnet/subnet-0ccd0929dd583657b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccd0929dd583657b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "776567512687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "sbh-private-subnet-2-dev",
              "Project": "sbh",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sbh-private-subnet-2-dev",
              "Project": "sbh",
              "Type": "private"
            },
            "vpc_id": "vpc-07e91ce7d5f546fb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sbh_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbh_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:776567512687:subnet/subnet-06c196d241873f2af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c196d241873f2af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776567512687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "sbh-public-subnet-1-dev",
              "Project": "sbh",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sbh-public-subnet-1-dev",
              "Project": "sbh",
              "Type": "public"
            },
            "vpc_id": "vpc-07e91ce7d5f546fb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sbh_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:776567512687:subnet/subnet-011cd0f0dcba5c788",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011cd0f0dcba5c788",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776567512687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "sbh-public-subnet-2-dev",
              "Project": "sbh",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sbh-public-subnet-2-dev",
              "Project": "sbh",
              "Type": "public"
            },
            "vpc_id": "vpc-07e91ce7d5f546fb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sbh_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sbh_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:776567512687:vpc/vpc-07e91ce7d5f546fb2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01479d1fb17a0065e",
            "default_route_table_id": "rtb-08e3471d99ce16815",
            "default_security_group_id": "sg-07224f976c5c60076",
            "dhcp_options_id": "dopt-0b85b5bd0a473072c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e91ce7d5f546fb2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e3471d99ce16815",
            "owner_id": "776567512687",
            "tags": {
              "Environment": "dev",
              "Name": "sbh-vpc-dev",
              "Project": "sbh"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sbh-vpc-dev",
              "Project": "sbh"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}